# Points

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  generate_docs.bat  generate_docs.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Designer/: Point.DrawIO
Example/: CMakeLists.txt  main.cpp
Example/AI_Generate_Code_Test/Example1-AllfunctionTest/: main.cpp  promp.txt
Example/Automate_Test_Pass/: unit1.cpp  unit2.cpp
doc/: design.drawio
examples/: ESP32_IoT_DataLogger.ino  SmartHomeThermostat.ino
src/: CMakeLists.txt  Point.cpp  Point.h  PointList.cpp  PointList.h  PointLists.h  Points.cpp  Points.h  TagStatic.h  TagUtility.cpp  TagUtility.h
